changed order for route in affidaorti to solve a bug
